cabal-version:      2.4
name:               advent-of-code2021
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Marc Reisner
maintainer:         mreisner@epic.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        AOC,
        Day1,
        Day2,
        Day3,
        Day4,
        Day5,
        Day6,
        Day7,
        Day8,
        Day9,
        Day10,
        Day11

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        http-client,
        http-client-tls,
        http-types,
        bytestring,
        dotenv,
        mtl,
        containers
    hs-source-dirs:   src
    default-language: Haskell2010

executable advent-of-code2021
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        advent-of-code2021,
        optparse-applicative,
        transformers,
        mtl

    hs-source-dirs:   app
    default-language: Haskell2010
